shellfirm/src/snapshots/shellfirm__config__test_config__can_update_challenge-3.snap
---
source: shellfirm/src/config.rs
expression: config.read_config_file()
---
Ok(
    "---\nchallenge: \"Yes\"\nincludes:\n  - default-check\nversion: 0.0.0\nchecks:\n  - test: default-check\n    method: Regex\n    enable: true\n    description: \"\"\n    from: default-check\n    challenge: Default\n    filters: {}\n",
)
