shellfirm/src/snapshots/shellfirm__config__test_config__can_update_challenge.snap
---
source: shellfirm/src/config.rs
expression: config.get_settings_from_file()
snapshot_kind: text
---
Ok(
    Settings {
        challenge: Math,
        includes_severities: [
            High,
            Critical,
        ],
        ignores_patterns_ids: [],
        deny_patterns_ids: [],
    },
)
