shellfirm/src/snapshots/shellfirm__config__test_config__can_update_config_content-4.snap
---
source: shellfirm/src/config.rs
expression: "fs::read_to_string(config.config_file_path)"
---
Ok(
    "---\nchallenge: Math\nincludes:\n  - default-check\nversion: 0.0.0\nchecks:\n  - test: default-check\n    method: Regex\n    enable: true\n    description: \"\"\n    from: default-check\n    challenge: Default\n    filters: {}\n",
)
