shellfirm/src/snapshots/shellfirm__config__test_config__can_update_config_content.snap
---
source: shellfirm/src/config.rs
expression: "config.update_config_content(false, &vec![\"test-2\".to_string()])"
---
Ok(
    (),
)
