shellfirm/src/snapshots/shellfirm__config__test_config__can_update_config_version-2.snap
---
source: shellfirm/src/config.rs
expression: config.read_config_file()
---
Ok(
    "---\nchallenge: Math\nincludes:\n  - default-check\n  - test-1\nversion: 0.0.0\nchecks:\n  - test: test-1\n    method: Regex\n    enable: true\n    description: \"\"\n    from: test-1\n    challenge: Default\n    filters: {}\n",
)
