shellfirm/src/snapshots/shellfirm__config__test_config__can_update_config_version.snap
---
source: shellfirm/src/config.rs
expression: config.update_config_version(&context)
---
Ok(
    (),
)
