shellfirm/src/snapshots/shellfirm__config__test_config__can_update_ignores-2.snap
---
source: shellfirm/src/config.rs
expression: config.get_settings_from_file()
---
Ok(
    Settings {
        challenge: Math,
        includes: [
            "base",
            "fs",
            "git",
        ],
        ignores: [
            "id-1",
            "id-2",
        ],
    },
)
